[tool.poetry]
name = "formindev_brain_games"
version = "0.9.0"
description = "A set of console mini-games"
authors = ["formindev <formindeve@gmail.com>"]
repository = "https://github.com/formindev/java-project-lvl1"
packages = [
    { include = "brain_games" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.6",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
